2nd commit on secondcommit

--- a/Index/index.html
+++ b/Index/index.html
@@ -188,7 +188,7 @@
     <!-- Start Property Section -->
 
     <section id="properties" class="py-5">
-      <div class="container">
+      <div class="container-fluid">
         <!-- Start Title -->
 
         <div class="row text-center">
@@ -198,34 +198,176 @@
         </div>
 
         <!-- End title -->
+
+        <ul class="list-inline text-center text-uppercase fw-bold">
+          <li
+            class="list-inline-item propertylists activeitems"
+            data-filter="all"
+          >
+            All
+            <span class="text-muted mx-md-5 mx-3">/</span>
+          </li>
+
+          <li class="list-inline-item propertylists" data-filter="house">
+            House
+            <span class="text-muted mx-md-5 mx-3">/</span>
+          </li>
+
+          <li class="list-inline-item propertylists" data-filter="decoration">
+            Decoration
+            <span class="text-muted mx-md-5 mx-3">/</span>
+          </li>
+
+          <li class="list-inline-item propertylists" data-filter="furniture">
+            Furniture
+            <span class="text-muted mx-md-5 mx-3">/</span>
+          </li>
+
+          <li class="list-inline-item propertylists" data-filter="office">
+            Office
+            <span class="text-muted mx-md-5 mx-3">/</span>
+          </li>
+        </ul>
+
+        <div class="container-fluid">
+          <div class="d-flex flex-wrap justify-content-center">
+            <div class="filters house">
+              <a href="#">
+                <img
+                  src="../assests/LIBS/img/gallery/image1.jpg"
+                  width="200px"
+                  alt="image1"
+              /></a>
+            </div>
+
+            <div class="filters house">
+              <a href="#">
+                <img
+                  src="../assests/LIBS/img/gallery/image2.jpg"
+                  width="200px"
+                  alt="image2"
+              /></a>
+            </div>
+
+            <div class="filters house">
+              <a href="#">
+                <img
+                  src="../assests/LIBS/img/gallery/image3.jpg"
+                  width="200px"
+                  alt="image3"
+              /></a>
+            </div>
+
+            <div class="filters decoration">
+              <a href="#">
+                <img
+                  src="../assests/LIBS/img/gallery/image4.jpg"
+                  width="200px"
+                  alt="image4"
+              /></a>
+            </div>
+
+            <div class="filters decoration">
+              <a href="#">
+                <img
+                  src="../assests/LIBS/img/gallery/image5.jpg"
+                  width="200px"
+                  alt="image5"
+              /></a>
+            </div>
+
+            <div class="filters decoration">
+              <a href="#">
+                <img
+                  src="../assests/LIBS/img/gallery/image6.jpg"
+                  width="200px"
+                  alt="image6"
+              /></a>
+            </div>
+
+            <div class="filters decoration">
+              <a href="#">
+                <img
+                  src="../assests/LIBS/img/gallery/image7.jpg"
+                  width="200px"
+                  alt="image7"
+              /></a>
+            </div>
+
+            <div class="filters furniture">
+              <a href="#">
+                <img
+                  src="../assests/LIBS/img/gallery/image8.jpg"
+                  width="200px"
+                  alt="image8"
+              /></a>
+            </div>
+
+            <div class="filters furniture">
+              <a href="#">
+                <img
+                  src="../assests/LIBS/img/gallery/image9.jpg"
+                  width="200px"
+                  alt="image9"
+              /></a>
+            </div>
+
+            <div class="filters furniture">
+              <a href="#">
+                <img
+                  src="../assests/LIBS/img/gallery/image1.jpg"
+                  width="200px"
+                  alt="image1"
+              /></a>
+            </div>
+
+            <div class="filters office">
+              <a href="#">
+                <img
+                  src="../assests/LIBS/img/gallery/image2.jpg"
+                  width="200px"
+                  alt="image2"
+              /></a>
+            </div>
+
+            <div class="filters office">
+              <a href="#">
+                <img
+                  src="../assests/LIBS/img/gallery/image3.jpg"
+                  width="200px"
+                  alt="image3"
+              /></a>
+            </div>
+
+            <div class="filters decoration">
+              <a href="#">
+                <img
+                  src="../assests/LIBS/img/gallery/image4.jpg"
+                  width="200px"
+                  alt="image4"
+              /></a>
+            </div>
+
+            <div class="filters furniture">
+              <a href="#">
+                <img
+                  src="../assests/LIBS/img/gallery/image5.jpg"
+                  width="200px"
+                  alt="image5"
+              /></a>
+            </div>
+
+            <div class="filters ofice">
+              <a href="#">
+                <img
+                  src="../assests/LIBS/img/gallery/image6.jpg"
+                  width="200px"
+                  alt="image6"
+              /></a>
+            </div>
+          </div>
+        </div>
       </div>
-
-      <ul class="list-inline text-center text-uppercase fw-bold">
-        <li class="list-inline-item propertylists activeitems">
-          All
-          <span class="text-muted mx-md-5 mx-3">/</span>
-        </li>
-
-        <li class="list-inline-item propertylists">
-          House
-          <span class="text-muted mx-md-5 mx-3">/</span>
-        </li>
-
-        <li class="list-inline-item propertylists">
-          Decoration
-          <span class="text-muted mx-md-5 mx-3">/</span>
-        </li>
-
-        <li class="list-inline-item propertylists">
-          Furniture
-          <span class="text-muted mx-md-5 mx-3">/</span>
-        </li>
-
-        <li class="list-inline-item propertylists">
-          Office
-          <span class="text-muted mx-md-5 mx-3">/</span>
-        </li>
-      </ul>
     </section>
 
     <!-- bootstrap css1 js1 -->
